[package]
name = "easy_english"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
actix-cors = "0.7.0"
actix-service = "2.0.2"
http = "0.2.12"
actix-files = "0.6.5"
actix-web = "4"
futures-util = "0.3.30"
serde = "1.0.197"
serde_json = "1.0.114"
async-std = "1.12.0"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls"] }
lazy_static = "1.4.0"
thiserror = "1.0.60"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
ramhorns = "0.14.0"
chat-gpt-rs = "1.4.0"
deepl = "0.6.3"
